fix, remove, rename

--- a/ecs-templates/frontend-container.yml
+++ b/ecs-templates/frontend-container.yml
@@ -130,7 +130,7 @@ Resources:
       DeploymentController: CODE_DEPLOY
       DesiredCount: 2
       EnableECSManagedTags: true
-      EnableExecuteCommand: Boolean ######
+      EnableExecuteCommand: false ######
       HealthCheckGracePeriodSeconds: 120
       LaunchType: FARGATE
       LoadBalancers: 
